Adding 1d advection code and reorganising folders

--- a/dispersion_ode.ipynb
+++ b/dispersion_ode.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -38,10 +38,10 @@
     }
    ],
    "source": [
-    "# Define the velocity field (constant in this example)\n",
+    "# Define the velocity field \n",
     "uvec = np.array([4.0, 0.0, 0.0])\n",
     "\n",
-    "# Define the gravitational settling velocity (constant in this example)\n",
+    "# Define the gravitational settling velocity \n",
     "ugvec = np.array([0.0, 0.0, -0.1])\n",
     "\n",
     "# Initialize parameters\n",
@@ -67,7 +67,7 @@
     "    wind_speed = np.sqrt(u[0]**2 + u[1]**2)\n",
     "    \n",
     "    # Pick random fluctuation at current time step\n",
-    "    t_idx = min(int(t0 / dt), len(rx) - 1)  # Ensure valid index\n",
+    "    t_idx = min(int(t0 / dt), len(rx) - 1)  #\n",
     "    fluct_x = rx[t_idx] * a * (wind_speed * dt) ** b\n",
     "    fluct_y = ry[t_idx] * a * (wind_speed * dt) ** b\n",
     "    fluct_z = reta[t_idx] * leta\n",
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
     "num_epochs = 100\n",
     "batch_size = 32\n",
     "\n",
-    "# Convert your data to PyTorch tensors\n",
+    "# Convert data to PyTorch tensors\n",
     "nninput_tensor = torch.tensor(nninput, dtype=torch.float32)\n",
     "nnoutput_tensor = torch.tensor(nnoutput, dtype=torch.float32)\n",
     "\n",
