Added error measurements and comparison plots for different schemes and NN

--- a/1d_advection_analytical.ipynb
+++ b/1d_advection_analytical.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
     "x = np.linspace(0, L, nx)\n",
     "\n",
     "# Initial condition: Gaussian pulse\n",
-    "phi_init = np.exp(-((x - L/4) / 0.1) ** 2)\n",
+    "u_init = np.exp(-((x - L/4) / 0.1) ** 2)\n",
     "\n",
     "# Times to plot\n",
     "times = [0, 1.0, 2.0, 3.0]\n",
@@ -50,8 +50,8 @@
     "plt.figure(figsize=(8, 5))\n",
     "for t in times:\n",
     "    x_shifted = (x - a * t) % L  # Apply periodic boundary condition\n",
-    "    phi_analytical = np.exp(-((x_shifted - L/4) / 0.15) ** 2)\n",
-    "    plt.plot(x, phi_analytical, label=f\"t={t:.2f}\")\n",
+    "    u_analytical = np.exp(-((x_shifted - L/4) / 0.15) ** 2)\n",
+    "    plt.plot(x, u_analytical, label=f\"t={t:.2f}\")\n",
     "\n",
     "plt.legend()\n",
     "plt.xlabel(\"x\")\n",
