--- a/1d_advection_upwind.ipynb
+++ b/1d_advection_upwind.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
     "nx = 300  # Number of spatial grid points\n",
     "L = 5.0  # Length of the domain\n",
     "dt = 0.01  # Time step\n",
-    "a = 0.5 # Advection speed. Tested Values 0.5, 1.0, 1.65, 2.0\n",
+    "a = 0.5 # Advection speed\n",
     "T = 5.0  # Total simulation time\n",
     "nt = int(T / dt)  # Number of time steps\n",
     "dx = L / (nx - 1)  # Spatial resolution\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -81,12 +81,10 @@
     "        plt.plot(x, u, label=f\"t={n*dt:.2f}\")\n",
     "\n",
     "# Plot results\n",
-    "# plt.plot(x, u_init, 'k--', label=\"Initial Condition\")\n",
     "plt.legend()\n",
     "plt.xlabel(\"x\")\n",
     "plt.ylabel(\"u\")\n",
     "plt.grid()\n",
-    "#plt.title(f\"Upwind Scheme with Periodic BC, a={a}, c={c: .3f}\")\n",
     "plt.savefig(f'plots/upwind_1d_cfl_{c: .3f}.png')\n",
     "plt.show()"
    ]
