Reorganising folders and adding report

--- a/Code/1d_advection_NN_testing.ipynb
+++ b/Code/1d_advection_NN_testing.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
     "nx = 300  # Number of spatial grid points\n",
     "L = 5.0  # Length of the domain\n",
     "dt = 0.01  # Time step\n",
-    "a = 0.5 # Advection speed\n",
+    "a = 1.0 # Advection speed\n",
     "T = 5.0  # Total simulation time\n",
     "nt = int(T / dt)  # Number of time steps\n",
     "dx = L / (nx - 1)  # Spatial resolution\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
     "plt.legend()\n",
     "plt.ylim(0.0, 1.05)\n",
     "plt.grid()\n",
-    "plt.savefig('plots/nn_05a.png')\n",
+    "# plt.savefig('plots/nn_05a.png')\n",
     "plt.show()"
    ]
   }
