--- a/Code/1d_advection_comparison.ipynb
+++ b/Code/1d_advection_comparison.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
     "u_new = np.zeros_like(u)\n",
     "\n",
     "for n in range(nt):\n",
-    "    # Apply Upwind update (first-order)\n",
+    "    # Apply Upwind update \n",
     "    u_new[1:] = u[1:] - c * (u[1:] - u[:-1])  # Forward in time, backward in space\n",
     "\n",
     "    # Periodic boundary condition: Update the first point using the last point\n",
