--- a/Code/1d_advection_upwind.ipynb
+++ b/Code/1d_advection_upwind.ipynb
@@ -67,7 +67,7 @@
     "u_new = np.zeros_like(u)\n",
     "\n",
     "for n in range(nt):\n",
-    "    # Apply Upwind update (first-order)\n",
+    "    # Apply Upwind update\n",
     "    u_new[1:] = u[1:] - c * (u[1:] - u[:-1])  # Forward in time, backward in space\n",
     "\n",
     "    # Periodic boundary condition: Update the first point using the last point\n",
