Changing folder structure again and adding small change to report

--- a/1d_advection_analytical.ipynb
+++ b/1d_advection_analytical.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
     "plt.ylabel(\"u\")\n",
     "plt.grid()\n",
     "plt.title(\"Analytical Solution of 1D Advection Equation\")\n",
-    "plt.savefig('plots/analytical_1d.png')\n",
+    "# plt.savefig('Plots/analytical_1d.png')\n",
     "plt.show()\n"
    ]
   },
