--- a/1d_advection_comparison.ipynb
+++ b/1d_advection_comparison.ipynb
@@ -188,7 +188,7 @@
     "plt.xlabel('Epoch')\n",
     "plt.ylabel ('Loss')\n",
     "plt.yscale('log') \n",
-    "plt.savefig('plots/training_loss.png')"
+    "# plt.savefig('plots/training_loss.png')"
    ]
   },
   {
@@ -317,7 +317,7 @@
     "plt.ylabel(\"u\")\n",
     "plt.grid()\n",
     "plt.title(f\"T={time}\")\n",
-    "plt.savefig(f'plots/comparison_{time}.png')\n",
+    "# plt.savefig(f'Plots/comparison_{time}.png')\n",
     "plt.show()"
    ]
   }
